tests/neg-custom-args/captures/function-combinators.check
-- Error: tests/neg-custom-args/captures/function-combinators.scala:15:22 ----------------------------------------------
15 |  val b2 = g1.andThen(g1); // error: separation failure
   |                      ^^
   |            Separation failure: argument of type (g1 : Int ->{ctx1} Int) to capture-polymorphic parameter
   |            of type Int => Int captures {ctx1}, and this capability is also passed separately to method andThen.
